# aooff

./: .gitignore  Cargo.toml  README.md  hyprland-popup.conf
src/: config.rs  lib.rs  main.rs
src/daemon/: ipc.rs  mod.rs  scanner.rs
src/popup/: mod.rs  ui.rs
src/protocol/: mod.rs
