[package]
name = "aooff"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aooff"
path = "src/main.rs"

[[bin]]
name = "aooff-popup"
path = "src/bin/popup.rs"

[dependencies]
arc-swap = "1.8.2"
rkyv = "0.8.15"
notify = "8.0"
walkdir = "2.5.0"
fuzzy-matcher = "0.3.7"
log = "0.4.29"
env_logger = "0.11.10"
ctrlc = "3.5.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = "1.50.0"

# UI dependencies
layershellev = "0.17.1"
softbuffer = "0.4.6"
cosmic-text = "0.12.1"
tiny-skia = "0.11.4"
winit = "0.31.0-beta.2"
toml = "1.1.2"
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = true
